package edu.fiuba.algo3.modelo.Logging;

public interface LoggingI {
    public void log(String evento);
}
