package edu.fiuba.algo3.modelo.movimientos;

public interface Movimiento {
    int moverFila(int columna);
    int moverColumna(int fila);
}
